--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-size: 100%;
-  background-image: url(images/images.jpg);
+  background-image: url('images/images.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   line-height: 1.5;
