--- a/templates/negative.html
+++ b/templates/negative.html
@@ -106,7 +106,7 @@
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
     <div class="container-floud">
-        <div class="col-xs-12 ground-color text-center">
+        <div class="col-xs-12 text-center">
             <h2 class="h1">Sorry! The page you tried cannot be found:(</h2>
             <input type="hidden" value="{{ name }}" id="movie_name" oninput="checkSimilarity()" readonly/>
             <hr>
