--- a/templates/negative.html
+++ b/templates/negative.html
@@ -111,7 +111,7 @@
 <body>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
-    <div class="container-fluid" result>
+    <div class="container-fluid result">
         <div class="col-xs-12 text-center">
             <h2 class="h1">Sorry! The page you tried cannot be found:(</h2>
             <input type="hidden" value="{{ name }}" id="movie_name" oninput="checkSimilarity()" readonly/>
