--- a/templates/negative.html
+++ b/templates/negative.html
@@ -98,6 +98,7 @@
     line-height: 1.5;
     color: #000;
     }
+  
     .result {
     margin: 50px;
     background-color: rgb(77, 0, 0,  0.5);
@@ -111,8 +112,8 @@
 <body>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
-    <div class="container-fluid result">
-        <div class="col-xs-12 text-center">
+    <div class="container-fluid">
+        <div class="col-xs-12 text-center result">
             <h2 class="h1">Sorry! The page you tried cannot be found:(</h2>
             <input type="hidden" value="{{ name }}" id="movie_name" oninput="checkSimilarity()" readonly/>
             <hr>
