--- a/templates/negative.html
+++ b/templates/negative.html
@@ -99,12 +99,41 @@
     color: #000;
     }
   
-    .result {
-    margin: 50px;
-    background-color: rgb(77, 0, 0,  0.5);
-    color: #fff;
-    font-family: verdana;
-    font-size: 20px;
+        .movie{
+        /* height: 50vh; */
+        margin-top: 35vh;
+        margin-bottom: 35vh;
+        margin-right: 10vh;
+        margin-left: 10vh;
+        display: block;
+        background-color: white;
+        border-radius: 20px;
+        padding: 1em;
+        width: auto;
+        box-shadow: 0px 0px 10px -4px grey;
+        text-align: center;
+    }
+    #movie_name{
+        width: 60%;
+        padding: 1em;
+        border-radius: 10px;
+        text-align: center;
+        border: 1px solid grey;
+    }
+    #submission_button{
+        width: 15%;
+        padding: 1em;
+        margin: 1em;
+        border-radius: 10px;
+        color: white;
+        background-color:rgb(97, 97, 97);
+        border-style: none;
+    }
+    @media screen and (max-width:600px) {
+        .movie{
+            margin-top: 12vh;
+            margin-bottom: 12vh;
+        }
     }
 
 </style>
@@ -113,7 +142,7 @@
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
     <div class="container-fluid">
-        <div class="col-xs-12 text-center result">
+        <div class="movie">
             <h2 class="h1">Sorry! The page you tried cannot be found:(</h2>
             <input type="hidden" value="{{ name }}" id="movie_name" oninput="checkSimilarity()" readonly/>
             <hr>
