--- a/templates/negative.html
+++ b/templates/negative.html
@@ -148,8 +148,9 @@
             <hr>
             <p>Did you mean?</p>
             <span id="suggestions"></span>
+            <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
         </div>
-        <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
+<!--         <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
     </div>
 </body>
 <script>
