--- a/templates/negative.html
+++ b/templates/negative.html
@@ -70,7 +70,7 @@
         padding: 2em;
         font-family: monospace;
     }
-    .button {
+/*     .button {
       font-weight: 300;
       color: #fff;
       font-size: 1.2em;
@@ -90,7 +90,7 @@
       background-color: #fff;
       color: #007aff;
         box-shadow: 0px 0px 5px -2px grey;
-    }
+    } */
     body {
     background-image: url("/static/images/images.jpg");
     background-repeat: no-repeat;
@@ -120,7 +120,7 @@
         text-align: center;
         border: 1px solid grey;
     }
-    #submission_button{
+    .submission_button{
         width: 15%;
         padding: 1em;
         margin: 1em;
@@ -148,7 +148,7 @@
             <hr>
             <p>Did you mean?</p>
             <span id="suggestions"></span>
-            <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
+            <a class="button submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
         </div>
 <!--         <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
     </div>
