--- a/templates/negative.html
+++ b/templates/negative.html
@@ -148,9 +148,9 @@
             <hr>
             <p>Did you mean?</p>
             <span id="suggestions"></span>
-            <a class="button submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
+<!--             <a class="submission_button button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
         </div>
-<!--         <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
+        <a class="button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
     </div>
 </body>
 <script>
