--- a/templates/negative.html
+++ b/templates/negative.html
@@ -137,7 +137,7 @@
             <span id="suggestions"></span>
 <!--             <a class="submission_button button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
         </div>
-        <a class="button submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
+        <a class="submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
     </div>
 </body>
 <script>
