--- a/templates/negative.html
+++ b/templates/negative.html
@@ -122,6 +122,12 @@
             margin-bottom: 12vh;
         }
     }
+  
+    .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
 
 </style>
 </head>
@@ -135,9 +141,10 @@
               <hr>
               <p>Did you mean?</p>
               <span id="suggestions"></span>
-  <!--             <a class="submission_button button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a> -->
+              <div class = "center">
+                <a class="submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
+              </div>
           </div>
-          <a class="submission_button" onClick="goBack()"><i class="fas fa-home"></i> Back to Home Page</a>
       </div>
   </body>
 <script>
