--- a/templates/positive.html
+++ b/templates/positive.html
@@ -22,11 +22,9 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-size: 100%;
+    background-color: #ffffff;
   line-height: 1.5;
   color: #000;
-  background-image: url("/static/images/images.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 @media (min-width: 32rem) {
   body {
