--- a/templates/positive.html
+++ b/templates/positive.html
@@ -19,9 +19,10 @@ html {
 }
 
 body {
-
-  background-repeat: no-repeat;
-  background-size: cover;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+    background-color: #ffffff;
   line-height: 1.5;
   color: #000;
 }
@@ -90,24 +91,22 @@ figure {
   background-repeat: no-repeat;
   background-size: cover;
 }
-    
-      /* Table */
-    .demo-table {
-      border-collapse: collapse;
+    .movie_table {
+    border-collapse: collapse;
       font-size: 13px;
     }
-    .demo-table th, 
-    .demo-table td {
+    .movie_table th, 
+    .movie_table td {
       border: 1px solid #e1edff;
       padding: 7px 17px;
     }
-    .demo-table .title {
+    .movie_table .title {
       caption-side: bottom;
       margin-top: 12px;
     }
     
     /* Table Header */
-    .demo-table thead th {
+    .movie_table thead th {
       background-color: #508abb;
       color: #FFFFFF;
       border-color: #6ea1cc !important;
@@ -115,31 +114,31 @@ figure {
     }
     
     /* Table Body */
-    .demo-table tbody td {
+    .movie_table tbody td {
       color: #353535;
     }
-    .demo-table tbody td:first-child,
-    .demo-table tbody td:last-child,
-    .demo-table tbody td:nth-child(4) {
+    .movie_table tbody td:first-child,
+    .movie_table tbody td:last-child,
+    .movie_table tbody td:nth-child(4) {
       text-align: right;
     }
-    .demo-table tbody tr:nth-child(odd) td {
+    .movie_table tbody tr:nth-child(odd) td {
       background-color: #f4fbff;
     }
-    .demo-table tbody tr:hover td {
+    .movie_table tbody tr:hover td {
       background-color: #ffffa2;
       border-color: #ffff0f;
       transition: all .2s;
     }
     
     /* Table Footer */
-    .demo-table tfoot th {
+    .movie_table tfoot th {
       background-color: #e5f5ff;
     }
-    .demo-table tfoot th:first-child {
+    .movie_table tfoot th:first-child {
       text-align: left;
     }
-    .demo-table tbody td:empty
+    .movie_table tbody td:empty
     {
       background-color: #ffcccc;
     }
@@ -147,7 +146,6 @@ figure {
     table,tr,td,th{
         border: 1px solid black;
         border-collapse: collapse;
-
     }
     td{
       padding: 10px;  
@@ -161,15 +159,15 @@ figure {
 
 
     <div class="movie">
-        <h2><u>Top Recommendations Movie:</u></h2>
-        <p>Menampilkan hasil dari {{ search_name }}</p>
-        <table class="demo-table" align="center">
+        <h2><u>Recommendations:</u></h2>
+        <p>Showing results for: {{ search_name }}</p>
+        <table class="movie_table" align="center">
             <tr>
                 <th>Movie Title</th>
                 <th>Release Date</th>
             </tr>
-            <tbody class="table_body" >
-                <tr >
+            <tbody class="table_body">
+                <tr>
                     <td>{{ movie_names[0] }}</td>
                     <td>{{ movie_date[0] }}</td>
                 </tr>
@@ -275,72 +273,6 @@ const Menu = (() => {
         }
       });
     },
-
-    toggleMenu(width) {
-      s.hamburger.toggleClass('js-hamburger');
-      s.body.toggleClass(s.open);
-      s.body.toggleClass(s.overflow);
-
-      // Opening transition
-      if (s.body.hasClass(s.open)) {
-        s.prevWidth = width;
-
-        anime.timeline({
-          easing: 'easeOutQuart',
-          duration: 600,
-          begin() {
-            $('.menu__img').css('left', `${width}%`);
-            s.body.addClass(s.visible);
-          } }).
-
-        add({
-          targets: '.menu__container',
-          width: [0, `${width}%`] }).
-
-        add({
-          targets: '.menu__img',
-          width: [0, `${100 - width}%`] },
-        0);
-      }
-
-      // Closing transition
-      if (!s.body.hasClass(s.open)) {
-        anime.timeline({
-          easing: 'easeInQuart',
-          duration: 600,
-          delay: 200,
-          complete() {
-            s.body.removeClass(s.visible);
-          } }).
-
-        add({
-          targets: '.menu__container',
-          width: [`${s.prevWidth}%`, 0] }).
-
-        add({
-          targets: '.menu__img',
-          width: [`${100 - s.prevWidth}%`, 0] },
-        0);
-      }
-    } };
-
-})();
-
-// Inits
-$(() => {
-  // Spanize
-  const span = $('.js-span');
-  let $ele, words;
-
-  for (let i = 0; i < span.length; i++) {
-    $ele = $(span).eq(i);
-    words = $ele.html();
-
-    $ele.html(words.replace(/([A-z0-9'@+-<>.,'"“”‘’?!*&/]+)/g, '<span>$&</span>'));
-  }
-
-  Menu.init();
-});    
 </script>
 
 </body>
