--- a/templates/positive.html
+++ b/templates/positive.html
@@ -91,45 +91,26 @@ figure {
   background-repeat: no-repeat;
   background-size: cover;
 }
-    .movie_table {
-    border-collapse: collapse;
-      font-size: 13px;
+    .movie{
+        height: 70vh;
+        margin-top: 15vh;
+        margin-bottom: 15vh;
+        margin-right: 5vh;
+        margin-left: 5vh;
+        display: block;
+        background-color: white;
+        border-radius: 20px;
+        padding: 1em;
+        width: auto;
+        box-shadow: 0px -10px 20px -5px #E2E2E2;
+        text-align: center;
     }
-    .movie_table th, 
-    .movie_table td {
-      border: 1px solid #e1edff;
-      padding: 7px 17px;
-    }
-    .movie_table .title {
-      caption-side: bottom;
-      margin-top: 12px;
-    }
-    
-    /* Table Header */
-    .movie_table thead th {
-      background-color: #508abb;
-      color: #FFFFFF;
-      border-color: #6ea1cc !important;
-      text-transform: uppercase;
-    }
-    
-    /* Table Body */
-    .movie_table tbody td {
-      color: #353535;
-    }
-    .movie_table tbody td:first-child,
-    .movie_table tbody td:last-child,
-    .movie_table tbody td:nth-child(4) {
-      text-align: right;
-    }
-    .movie_table tbody tr:nth-child(odd) td {
-      background-color: #f4fbff;
-    }
-    .movie_table tbody tr:hover td {
-      background-color: #ffffa2;
-      border-color: #ffff0f;
-      transition: all .2s;
-    }
+
+    @media screen and (max-width:600px) {
+        .movie{
+            margin-top: 12vh;
+            margin-bottom: 12vh;
+        }
     
     /* Table Footer */
     .movie_table tfoot th {
