--- a/templates/positive.html
+++ b/templates/positive.html
@@ -19,6 +19,7 @@ html {
 }
 
 body {
+  background-image: url("/static/images/images.jpg");
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-size: 100%;
