--- a/templates/positive.html
+++ b/templates/positive.html
@@ -20,10 +20,8 @@ html {
 
 body {
   background-image: url("/static/images/images.jpg");
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: 100%;
-    background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-size: cover;
   line-height: 1.5;
   color: #000;
 }
