--- a/templates/positive.html
+++ b/templates/positive.html
@@ -92,8 +92,9 @@ figure {
 }
     
     .movie{
-        height: 500vh;
+        height: 400vh;
         margin-top: 15vh;
+        oppacity:70%;
         margin-bottom: 15vh;
         margin-right: 5vh;
         margin-left: 5vh;
