--- a/templates/positive.html
+++ b/templates/positive.html
@@ -92,9 +92,9 @@ figure {
 }
     
     .movie{
-        height: 400vh;
+        height: 300vh;
+        opacity:0.4;
         margin-top: 15vh;
-        oppacity:70%;
         margin-bottom: 15vh;
         margin-right: 5vh;
         margin-left: 5vh;
