--- a/templates/positive.html
+++ b/templates/positive.html
@@ -92,7 +92,8 @@ figure {
 }
     
     .movie{
-        height: 250vh;
+        height: 350vh;
+        opacity:0.7;
         margin-top: 15vh;
         margin-bottom: 15vh;
         margin-right: 5vh;
