--- a/templates/positive.html
+++ b/templates/positive.html
@@ -129,8 +129,8 @@ figure {
 
 
     <div class="movie">
-        <h2><u>Recommendations:</u></h2>
-        <p>Showing results for: {{ search_name }}</p>
+        <h2><u>Top Recommendations Movie:</u></h2>
+        <p>Hasil pencarian dari {{ search_name }}</p>
         <table class="movie_table" align="center">
             <tr>
                 <th>Movie Title</th>
