--- a/templates/positive.html
+++ b/templates/positive.html
@@ -90,7 +90,59 @@ figure {
   background-repeat: no-repeat;
   background-size: cover;
 }
+    /* Table */
+    .demo-table {
+      border-collapse: collapse;
+      font-size: 13px;
+    }
+    .demo-table th, 
+    .demo-table td {
+      border: 1px solid #e1edff;
+      padding: 7px 17px;
+    }
+    .demo-table .title {
+      caption-side: bottom;
+      margin-top: 12px;
+    }
     
+    /* Table Header */
+    .demo-table thead th {
+      background-color: #508abb;
+      color: #FFFFFF;
+      border-color: #6ea1cc !important;
+      text-transform: uppercase;
+    }
+    
+    /* Table Body */
+    .demo-table tbody td {
+      color: #353535;
+    }
+    .demo-table tbody td:first-child,
+    .demo-table tbody td:last-child,
+    .demo-table tbody td:nth-child(4) {
+      text-align: right;
+    }
+    .demo-table tbody tr:nth-child(odd) td {
+      background-color: #f4fbff;
+    }
+    .demo-table tbody tr:hover td {
+      background-color: #ffffa2;
+      border-color: #ffff0f;
+      transition: all .2s;
+    }
+    
+    /* Table Footer */
+    .demo-table tfoot th {
+      background-color: #e5f5ff;
+    }
+    .demo-table tfoot th:first-child {
+      text-align: left;
+    }
+    .demo-table tbody td:empty
+    {
+      background-color: #ffcccc;
+    }
+  
     .movie{
         height: 350vh;
         opacity:0.7;
@@ -131,7 +183,7 @@ figure {
     <div class="movie">
         <h2><u>Top Recommendations Movie:</u></h2>
         <p>Hasil pencarian dari {{ search_name }}</p>
-        <table class="movie_table" align="center">
+        <table class="demo-table" align="center">
             <tr>
                 <th>Movie Title</th>
                 <th>Release Date</th>
