--- a/templates/positive.html
+++ b/templates/positive.html
@@ -107,7 +107,7 @@ figure {
     
     /* Table Header */
     .demo-table thead th {
-      background-color: #508abb;
+      background-color: #4384d9;
       color: #FFFFFF;
       border-color: #6ea1cc !important;
       text-transform: uppercase;
